
WIP      Update code to use xbmcgui.Dialog().select() - additions.
         Get rid of the ImgSelectDialog() class. This need Krypton Beta 4 to run!

FEATURE  Option to group Unknown ROMs as clones or keep them as parents. I realised it is not
         conveninent that the Unknown ROMs are clones in the Parent/Clone view.

WIP      1 Game 1 ROM launcher display mode. Copy it from AML.

FEATURE  Addon option to hide [Browse Offline Scraper].

FEATURE  Remove duplicates from recent ROMs list. Contributed by bonzini.
         See https://github.com/Wintermute0110/plugin.program.advanced.emulator.launcher/pull/41

FIX      Fixed launching of BAT files in Windows.

FIX      In order for skin shortcuts and widgets to work OK, addon concurrency must be enabled
         by database read-only commands.


[B]Advanced Emulator Launcher | version 0.9.6 | 20 May 2017[/B]

FEATURE  Set Parent/Clone property so skins can display flag.

FEATURE  Support ERSB and NPlayers in offline scraper.

FEATURE  Support ERSB and NPlayers in online scrapers.

FEATURE  Virtual category to browse the Offline Scraper database.

FEATURE  Updated the number of databases in the Offline Scraper.

FEATURE  ROM scanner reports.

FEATURE  Refurbish ROM auditing and Parent/Clone view display mode.

FEATURE  Added a "Display ROMs" setting valid only in Parent/Clone display mode.

         See http://forum.kodi.tv/showthread.php?tid=287826&pid=2581878#pid2581878
         See http://forum.kodi.tv/showthread.php?tid=287826&pid=2582004#pid2582004

FEATURE  Support Redump DAT files. Note that Redump does not include Parent/Clone data so all
         ROMs are Parent ROMs.

FEATURE  New platform Panasonic 3DO.

FEATURE  Update NFO files after scraping. This is useful to interrupt the scanner when scanning
         large collections and resume scanning later.
         See http://forum.kodi.tv/showthread.php?tid=287826&pid=2548998#pid2548998

FEATURE  Allow only one instance of AEL running at a time.