@@ -48,6 +48,8 @@ FEATURE  Option to group Unknown ROMs as clones or keep them as parents. I reali
          conveninent that the Unknown ROMs are clones in the Parent/Clone view.
 
 WIP      1 Game 1 ROM launcher display mode. Copy it from AML.
+         Changed launcher['pclone_launcher'] to launcher['launcher_display_mode'] to store the
+         display mode in categories.xml database.
 
 FEATURE  Addon option to hide [Browse Offline Scraper].
 
